# octopoda-github

./: .cproject  .project  CHANGES  Changelog.txt  MK.config  Makefile  Makefile.am  Octopoda.cpp  PROG_VERSION.def  README  README.md  config.h.in  config.status  configure  configure.in  main.cpp  readme.txt
auto/: define  endianness  feature  have  have_headers  headers  include  init  install  make  modules  nohave  options  sources  stubs  summary  unix
auto/cc/: conf  gcc  name
auto/lib/: conf  make  test
auto/os/: conf  linux
auto/types/: sizeof  typedef  uintptr_t  value
autom4te.cache/: output.0  traces.0
prog/: .dep.main.d  .exrc  Makefile  install-ftp.sh  install_userver.sh
prog/etc/: Test.conf  UServerHawk.conf  presstest.conf  userverhawk.logrt
src/: Octopoda.cpp  Octopoda.h
src/core/: Acceptor.cpp  Acceptor.h  ConfHandler.h  Connection.cpp  Connection.h  Connector.cpp  Connector.h  FlowControl.cpp  FlowControl.h  GeneralConf.cpp  GeneralConf.h  Handle.h  IOStream.h  Module.cpp  Module.h  Request.cpp  Request.h  StringBuffer.cpp  StringBuffer.h  StringBuilder.h  StringBuilder_test.cpp  StringChain.cpp  StringChain.h  StringUtils.cpp  StringUtils.h  TransactionMilestones.cpp  TransactionMilestones.h  oc_config.h  oc_core.h  oc_cpu.h  oc_err.h  oc_string.h  octopoda.cpp
src/hdr/: HdrHeap.cpp  HdrToken.cc  HdrToken.cpp  MIME.h  URL.cpp  load_http_hdr.cpp
src/http/: HTTP.cc  HTTP.cpp  HTTP.h  HdrHeap.cc  Http.cpp  Http.h  Http.h_bak  HttpAcceptor.cpp  (+81 more)
test/: HttpConnector_test.cpp
tools/: gepkg.sh  install_userver.sh  owuserver.sh
(+11 files in other folders)
