#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([Octopoda], [1.0.0.0], [BUG-REPORT-ADDRESS])
AC_CONFIG_SRCDIR([Octopoda.cpp])
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
BaseARE 
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_INT32_T

# Checks for library functions.

AC_OUTPUT(Makefile)
